TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> body
Rule 1     body -> atribuicoes operacoes
Rule 2     atribuicoes -> atribuicoes atribuicao
Rule 3     atribuicoes -> <empty>
Rule 4     atribuicao -> INT_A ID EQUAL INT ;
Rule 5     atribuicao -> INT_A ID ;
Rule 6     atribuicao -> INT_A ID [ INT ] ;
Rule 7     atribuicao -> INT_A ID [ INT ] [ INT ] ;
Rule 8     atribuicao -> STRING_A ID EQUAL STRING ;
Rule 9     operacoes -> operacoes operacao
Rule 10    operacoes -> operacoes operacao_inc
Rule 11    operacoes -> <empty>
Rule 12    operacao_inc -> ID + + ;
Rule 13    operacao_inc -> ID - - ;
Rule 14    operacao_inc -> ID + EQUAL expressao ;
Rule 15    operacao_inc -> ID - EQUAL expressao ;
Rule 16    operacao_inc -> ID [ INT ] + + ;
Rule 17    operacao_inc -> ID [ ID ] + + ;
Rule 18    operacao_inc -> ID [ INT ] - - ;
Rule 19    operacao_inc -> ID [ ID ] - - ;
Rule 20    operacao_inc -> ID [ INT ] + EQUAL expressao ;
Rule 21    operacao_inc -> ID [ ID ] + EQUAL expressao ;
Rule 22    operacao_inc -> ID [ INT ] - EQUAL expressao ;
Rule 23    operacao_inc -> ID [ ID ] - EQUAL expressao ;
Rule 24    operacao_inc -> ID [ INT ] [ INT ] + + ;
Rule 25    operacao_inc -> ID [ INT ] [ INT ] - - ;
Rule 26    operacao_inc -> ID [ INT ] [ INT ] + EQUAL expressao ;
Rule 27    operacao_inc -> ID [ INT ] [ INT ] - EQUAL expressao ;
Rule 28    operacao -> ID EQUAL expressoes ;
Rule 29    operacao -> ID [ INT ] [ INT ] EQUAL expressoes ;
Rule 30    operacao -> ID [ INT ] EQUAL expressoes ;
Rule 31    operacao -> ID [ ID ] EQUAL expressoes ;
Rule 32    operacao -> PRINT ID ;
Rule 33    operacao -> PRINT ID [ INT ] ;
Rule 34    operacao -> PRINT ID [ ID ] ;
Rule 35    operacao -> PRINT ID [ INT ] [ INT ] ;
Rule 36    operacao -> PRINT STRING ;
Rule 37    operacao -> IF ( expressao_logica ) { operacoes }
Rule 38    operacao -> IF ( expressao_logica ) { operacoes } ELSE { operacoes }
Rule 39    operacao -> FOR ( ID EQUAL expressao ; expressao_logica ; operacao_inc ) { operacoes }
Rule 40    operacao -> READ ID ;
Rule 41    operacao -> READ ID [ INT ] ;
Rule 42    operacao -> READ ID [ ID ] ;
Rule 43    operacao -> READ ID [ INT ] [ INT ] ;
Rule 44    expressoes -> expressao
Rule 45    expressoes -> expressao_logica
Rule 46    expressao -> expressao + termo
Rule 47    expressao -> expressao - termo
Rule 48    expressao -> termo
Rule 49    termo -> termo * fator
Rule 50    termo -> termo / fator
Rule 51    termo -> termo % fator
Rule 52    termo -> fator
Rule 53    fator -> INT
Rule 54    fator -> ( expressao )
Rule 55    fator -> ID
Rule 56    fator -> ID [ INT ]
Rule 57    fator -> ID [ ID ]
Rule 58    fator -> ID [ INT ] [ INT ]
Rule 59    expressao_relacional -> expressao > expressao
Rule 60    expressao_relacional -> expressao < expressao
Rule 61    expressao_relacional -> expressao LESS_EQUAL expressao
Rule 62    expressao_relacional -> expressao MORE_EQUAL expressao
Rule 63    expressao_relacional -> expressao EQUAL_EQUAL expressao
Rule 64    expressao_relacional -> expressao DIF expressao
Rule 65    expressao_logica -> ! fator_logico
Rule 66    expressao_logica -> expressao_logica AND fator_logico
Rule 67    expressao_logica -> expressao_logica OR fator_logico
Rule 68    expressao_logica -> fator_logico
Rule 69    fator_logico -> ( expressao_logica )
Rule 70    fator_logico -> expressao_relacional

Terminals, with rules where they appear

!                    : 65
%                    : 51
(                    : 37 38 39 54 69
)                    : 37 38 39 54 69
*                    : 49
+                    : 12 12 14 16 16 17 17 20 21 24 24 26 46
-                    : 13 13 15 18 18 19 19 22 23 25 25 27 47
/                    : 50
;                    : 4 5 6 7 8 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 39 39 40 41 42 43
<                    : 60
>                    : 59
AND                  : 66
DIF                  : 64
ELSE                 : 38
EQUAL                : 4 8 14 15 20 21 22 23 26 27 28 29 30 31 39
EQUAL_EQUAL          : 63
FOR                  : 39
ID                   : 4 5 6 7 8 12 13 14 15 16 17 17 18 19 19 20 21 21 22 23 23 24 25 26 27 28 29 30 31 31 32 33 34 34 35 39 40 41 42 42 43 55 56 57 57 58
IF                   : 37 38
INT                  : 4 6 7 7 16 18 20 22 24 24 25 25 26 26 27 27 29 29 30 33 35 35 41 43 43 53 56 58 58
INT_A                : 4 5 6 7
LESS_EQUAL           : 61
MORE_EQUAL           : 62
OR                   : 67
PRINT                : 32 33 34 35 36
READ                 : 40 41 42 43
STRING               : 8 36
STRING_A             : 8
[                    : 6 7 7 16 17 18 19 20 21 22 23 24 24 25 25 26 26 27 27 29 29 30 31 33 34 35 35 41 42 43 43 56 57 58 58
]                    : 6 7 7 16 17 18 19 20 21 22 23 24 24 25 25 26 26 27 27 29 29 30 31 33 34 35 35 41 42 43 43 56 57 58 58
error                : 
{                    : 37 38 38 39
}                    : 37 38 38 39

Nonterminals, with rules where they appear

atribuicao           : 2
atribuicoes          : 1 2
body                 : 0
expressao            : 14 15 20 21 22 23 26 27 39 44 46 47 54 59 59 60 60 61 61 62 62 63 63 64 64
expressao_logica     : 37 38 39 45 66 67 69
expressao_relacional : 70
expressoes           : 28 29 30 31
fator                : 49 50 51 52
fator_logico         : 65 66 67 68
operacao             : 9
operacao_inc         : 10 39
operacoes            : 1 9 10 37 38 38 39
termo                : 46 47 48 49 50 51

Parsing method: LALR

state 0

    (0) S' -> . body
    (1) body -> . atribuicoes operacoes
    (2) atribuicoes -> . atribuicoes atribuicao
    (3) atribuicoes -> .

    INT_A           reduce using rule 3 (atribuicoes -> .)
    STRING_A        reduce using rule 3 (atribuicoes -> .)
    ID              reduce using rule 3 (atribuicoes -> .)
    PRINT           reduce using rule 3 (atribuicoes -> .)
    IF              reduce using rule 3 (atribuicoes -> .)
    FOR             reduce using rule 3 (atribuicoes -> .)
    READ            reduce using rule 3 (atribuicoes -> .)
    $end            reduce using rule 3 (atribuicoes -> .)

    body                           shift and go to state 1
    atribuicoes                    shift and go to state 2

state 1

    (0) S' -> body .



state 2

    (1) body -> atribuicoes . operacoes
    (2) atribuicoes -> atribuicoes . atribuicao
    (9) operacoes -> . operacoes operacao
    (10) operacoes -> . operacoes operacao_inc
    (11) operacoes -> .
    (4) atribuicao -> . INT_A ID EQUAL INT ;
    (5) atribuicao -> . INT_A ID ;
    (6) atribuicao -> . INT_A ID [ INT ] ;
    (7) atribuicao -> . INT_A ID [ INT ] [ INT ] ;
    (8) atribuicao -> . STRING_A ID EQUAL STRING ;

    ID              reduce using rule 11 (operacoes -> .)
    PRINT           reduce using rule 11 (operacoes -> .)
    IF              reduce using rule 11 (operacoes -> .)
    FOR             reduce using rule 11 (operacoes -> .)
    READ            reduce using rule 11 (operacoes -> .)
    $end            reduce using rule 11 (operacoes -> .)
    INT_A           shift and go to state 5
    STRING_A        shift and go to state 6

    operacoes                      shift and go to state 3
    atribuicao                     shift and go to state 4

state 3

    (1) body -> atribuicoes operacoes .
    (9) operacoes -> operacoes . operacao
    (10) operacoes -> operacoes . operacao_inc
    (28) operacao -> . ID EQUAL expressoes ;
    (29) operacao -> . ID [ INT ] [ INT ] EQUAL expressoes ;
    (30) operacao -> . ID [ INT ] EQUAL expressoes ;
    (31) operacao -> . ID [ ID ] EQUAL expressoes ;
    (32) operacao -> . PRINT ID ;
    (33) operacao -> . PRINT ID [ INT ] ;
    (34) operacao -> . PRINT ID [ ID ] ;
    (35) operacao -> . PRINT ID [ INT ] [ INT ] ;
    (36) operacao -> . PRINT STRING ;
    (37) operacao -> . IF ( expressao_logica ) { operacoes }
    (38) operacao -> . IF ( expressao_logica ) { operacoes } ELSE { operacoes }
    (39) operacao -> . FOR ( ID EQUAL expressao ; expressao_logica ; operacao_inc ) { operacoes }
    (40) operacao -> . READ ID ;
    (41) operacao -> . READ ID [ INT ] ;
    (42) operacao -> . READ ID [ ID ] ;
    (43) operacao -> . READ ID [ INT ] [ INT ] ;
    (12) operacao_inc -> . ID + + ;
    (13) operacao_inc -> . ID - - ;
    (14) operacao_inc -> . ID + EQUAL expressao ;
    (15) operacao_inc -> . ID - EQUAL expressao ;
    (16) operacao_inc -> . ID [ INT ] + + ;
    (17) operacao_inc -> . ID [ ID ] + + ;
    (18) operacao_inc -> . ID [ INT ] - - ;
    (19) operacao_inc -> . ID [ ID ] - - ;
    (20) operacao_inc -> . ID [ INT ] + EQUAL expressao ;
    (21) operacao_inc -> . ID [ ID ] + EQUAL expressao ;
    (22) operacao_inc -> . ID [ INT ] - EQUAL expressao ;
    (23) operacao_inc -> . ID [ ID ] - EQUAL expressao ;
    (24) operacao_inc -> . ID [ INT ] [ INT ] + + ;
    (25) operacao_inc -> . ID [ INT ] [ INT ] - - ;
    (26) operacao_inc -> . ID [ INT ] [ INT ] + EQUAL expressao ;
    (27) operacao_inc -> . ID [ INT ] [ INT ] - EQUAL expressao ;

    $end            reduce using rule 1 (body -> atribuicoes operacoes .)
    ID              shift and go to state 9
    PRINT           shift and go to state 10
    IF              shift and go to state 11
    FOR             shift and go to state 12
    READ            shift and go to state 13

    operacao                       shift and go to state 7
    operacao_inc                   shift and go to state 8

state 4

    (2) atribuicoes -> atribuicoes atribuicao .

    INT_A           reduce using rule 2 (atribuicoes -> atribuicoes atribuicao .)
    STRING_A        reduce using rule 2 (atribuicoes -> atribuicoes atribuicao .)
    ID              reduce using rule 2 (atribuicoes -> atribuicoes atribuicao .)
    PRINT           reduce using rule 2 (atribuicoes -> atribuicoes atribuicao .)
    IF              reduce using rule 2 (atribuicoes -> atribuicoes atribuicao .)
    FOR             reduce using rule 2 (atribuicoes -> atribuicoes atribuicao .)
    READ            reduce using rule 2 (atribuicoes -> atribuicoes atribuicao .)
    $end            reduce using rule 2 (atribuicoes -> atribuicoes atribuicao .)


state 5

    (4) atribuicao -> INT_A . ID EQUAL INT ;
    (5) atribuicao -> INT_A . ID ;
    (6) atribuicao -> INT_A . ID [ INT ] ;
    (7) atribuicao -> INT_A . ID [ INT ] [ INT ] ;

    ID              shift and go to state 14


state 6

    (8) atribuicao -> STRING_A . ID EQUAL STRING ;

    ID              shift and go to state 15


state 7

    (9) operacoes -> operacoes operacao .

    ID              reduce using rule 9 (operacoes -> operacoes operacao .)
    PRINT           reduce using rule 9 (operacoes -> operacoes operacao .)
    IF              reduce using rule 9 (operacoes -> operacoes operacao .)
    FOR             reduce using rule 9 (operacoes -> operacoes operacao .)
    READ            reduce using rule 9 (operacoes -> operacoes operacao .)
    $end            reduce using rule 9 (operacoes -> operacoes operacao .)
    }               reduce using rule 9 (operacoes -> operacoes operacao .)


state 8

    (10) operacoes -> operacoes operacao_inc .

    ID              reduce using rule 10 (operacoes -> operacoes operacao_inc .)
    PRINT           reduce using rule 10 (operacoes -> operacoes operacao_inc .)
    IF              reduce using rule 10 (operacoes -> operacoes operacao_inc .)
    FOR             reduce using rule 10 (operacoes -> operacoes operacao_inc .)
    READ            reduce using rule 10 (operacoes -> operacoes operacao_inc .)
    $end            reduce using rule 10 (operacoes -> operacoes operacao_inc .)
    }               reduce using rule 10 (operacoes -> operacoes operacao_inc .)


state 9

    (28) operacao -> ID . EQUAL expressoes ;
    (29) operacao -> ID . [ INT ] [ INT ] EQUAL expressoes ;
    (30) operacao -> ID . [ INT ] EQUAL expressoes ;
    (31) operacao -> ID . [ ID ] EQUAL expressoes ;
    (12) operacao_inc -> ID . + + ;
    (13) operacao_inc -> ID . - - ;
    (14) operacao_inc -> ID . + EQUAL expressao ;
    (15) operacao_inc -> ID . - EQUAL expressao ;
    (16) operacao_inc -> ID . [ INT ] + + ;
    (17) operacao_inc -> ID . [ ID ] + + ;
    (18) operacao_inc -> ID . [ INT ] - - ;
    (19) operacao_inc -> ID . [ ID ] - - ;
    (20) operacao_inc -> ID . [ INT ] + EQUAL expressao ;
    (21) operacao_inc -> ID . [ ID ] + EQUAL expressao ;
    (22) operacao_inc -> ID . [ INT ] - EQUAL expressao ;
    (23) operacao_inc -> ID . [ ID ] - EQUAL expressao ;
    (24) operacao_inc -> ID . [ INT ] [ INT ] + + ;
    (25) operacao_inc -> ID . [ INT ] [ INT ] - - ;
    (26) operacao_inc -> ID . [ INT ] [ INT ] + EQUAL expressao ;
    (27) operacao_inc -> ID . [ INT ] [ INT ] - EQUAL expressao ;

    EQUAL           shift and go to state 16
    [               shift and go to state 17
    +               shift and go to state 18
    -               shift and go to state 19


state 10

    (32) operacao -> PRINT . ID ;
    (33) operacao -> PRINT . ID [ INT ] ;
    (34) operacao -> PRINT . ID [ ID ] ;
    (35) operacao -> PRINT . ID [ INT ] [ INT ] ;
    (36) operacao -> PRINT . STRING ;

    ID              shift and go to state 20
    STRING          shift and go to state 21


state 11

    (37) operacao -> IF . ( expressao_logica ) { operacoes }
    (38) operacao -> IF . ( expressao_logica ) { operacoes } ELSE { operacoes }

    (               shift and go to state 22


state 12

    (39) operacao -> FOR . ( ID EQUAL expressao ; expressao_logica ; operacao_inc ) { operacoes }

    (               shift and go to state 23


state 13

    (40) operacao -> READ . ID ;
    (41) operacao -> READ . ID [ INT ] ;
    (42) operacao -> READ . ID [ ID ] ;
    (43) operacao -> READ . ID [ INT ] [ INT ] ;

    ID              shift and go to state 24


state 14

    (4) atribuicao -> INT_A ID . EQUAL INT ;
    (5) atribuicao -> INT_A ID . ;
    (6) atribuicao -> INT_A ID . [ INT ] ;
    (7) atribuicao -> INT_A ID . [ INT ] [ INT ] ;

    EQUAL           shift and go to state 25
    ;               shift and go to state 26
    [               shift and go to state 27


state 15

    (8) atribuicao -> STRING_A ID . EQUAL STRING ;

    EQUAL           shift and go to state 28


state 16

    (28) operacao -> ID EQUAL . expressoes ;
    (44) expressoes -> . expressao
    (45) expressoes -> . expressao_logica
    (46) expressao -> . expressao + termo
    (47) expressao -> . expressao - termo
    (48) expressao -> . termo
    (65) expressao_logica -> . ! fator_logico
    (66) expressao_logica -> . expressao_logica AND fator_logico
    (67) expressao_logica -> . expressao_logica OR fator_logico
    (68) expressao_logica -> . fator_logico
    (49) termo -> . termo * fator
    (50) termo -> . termo / fator
    (51) termo -> . termo % fator
    (52) termo -> . fator
    (69) fator_logico -> . ( expressao_logica )
    (70) fator_logico -> . expressao_relacional
    (53) fator -> . INT
    (54) fator -> . ( expressao )
    (55) fator -> . ID
    (56) fator -> . ID [ INT ]
    (57) fator -> . ID [ ID ]
    (58) fator -> . ID [ INT ] [ INT ]
    (59) expressao_relacional -> . expressao > expressao
    (60) expressao_relacional -> . expressao < expressao
    (61) expressao_relacional -> . expressao LESS_EQUAL expressao
    (62) expressao_relacional -> . expressao MORE_EQUAL expressao
    (63) expressao_relacional -> . expressao EQUAL_EQUAL expressao
    (64) expressao_relacional -> . expressao DIF expressao

    !               shift and go to state 34
    (               shift and go to state 37
    INT             shift and go to state 39
    ID              shift and go to state 29

    expressoes                     shift and go to state 30
    expressao                      shift and go to state 31
    expressao_logica               shift and go to state 32
    termo                          shift and go to state 33
    fator_logico                   shift and go to state 35
    fator                          shift and go to state 36
    expressao_relacional           shift and go to state 38

state 17

    (29) operacao -> ID [ . INT ] [ INT ] EQUAL expressoes ;
    (30) operacao -> ID [ . INT ] EQUAL expressoes ;
    (31) operacao -> ID [ . ID ] EQUAL expressoes ;
    (16) operacao_inc -> ID [ . INT ] + + ;
    (17) operacao_inc -> ID [ . ID ] + + ;
    (18) operacao_inc -> ID [ . INT ] - - ;
    (19) operacao_inc -> ID [ . ID ] - - ;
    (20) operacao_inc -> ID [ . INT ] + EQUAL expressao ;
    (21) operacao_inc -> ID [ . ID ] + EQUAL expressao ;
    (22) operacao_inc -> ID [ . INT ] - EQUAL expressao ;
    (23) operacao_inc -> ID [ . ID ] - EQUAL expressao ;
    (24) operacao_inc -> ID [ . INT ] [ INT ] + + ;
    (25) operacao_inc -> ID [ . INT ] [ INT ] - - ;
    (26) operacao_inc -> ID [ . INT ] [ INT ] + EQUAL expressao ;
    (27) operacao_inc -> ID [ . INT ] [ INT ] - EQUAL expressao ;

    INT             shift and go to state 41
    ID              shift and go to state 40


state 18

    (12) operacao_inc -> ID + . + ;
    (14) operacao_inc -> ID + . EQUAL expressao ;

    +               shift and go to state 42
    EQUAL           shift and go to state 43


state 19

    (13) operacao_inc -> ID - . - ;
    (15) operacao_inc -> ID - . EQUAL expressao ;

    -               shift and go to state 44
    EQUAL           shift and go to state 45


state 20

    (32) operacao -> PRINT ID . ;
    (33) operacao -> PRINT ID . [ INT ] ;
    (34) operacao -> PRINT ID . [ ID ] ;
    (35) operacao -> PRINT ID . [ INT ] [ INT ] ;

    ;               shift and go to state 46
    [               shift and go to state 47


state 21

    (36) operacao -> PRINT STRING . ;

    ;               shift and go to state 48


state 22

    (37) operacao -> IF ( . expressao_logica ) { operacoes }
    (38) operacao -> IF ( . expressao_logica ) { operacoes } ELSE { operacoes }
    (65) expressao_logica -> . ! fator_logico
    (66) expressao_logica -> . expressao_logica AND fator_logico
    (67) expressao_logica -> . expressao_logica OR fator_logico
    (68) expressao_logica -> . fator_logico
    (69) fator_logico -> . ( expressao_logica )
    (70) fator_logico -> . expressao_relacional
    (59) expressao_relacional -> . expressao > expressao
    (60) expressao_relacional -> . expressao < expressao
    (61) expressao_relacional -> . expressao LESS_EQUAL expressao
    (62) expressao_relacional -> . expressao MORE_EQUAL expressao
    (63) expressao_relacional -> . expressao EQUAL_EQUAL expressao
    (64) expressao_relacional -> . expressao DIF expressao
    (46) expressao -> . expressao + termo
    (47) expressao -> . expressao - termo
    (48) expressao -> . termo
    (49) termo -> . termo * fator
    (50) termo -> . termo / fator
    (51) termo -> . termo % fator
    (52) termo -> . fator
    (53) fator -> . INT
    (54) fator -> . ( expressao )
    (55) fator -> . ID
    (56) fator -> . ID [ INT ]
    (57) fator -> . ID [ ID ]
    (58) fator -> . ID [ INT ] [ INT ]

    !               shift and go to state 34
    (               shift and go to state 37
    INT             shift and go to state 39
    ID              shift and go to state 29

    expressao_logica               shift and go to state 49
    fator_logico                   shift and go to state 35
    expressao_relacional           shift and go to state 38
    expressao                      shift and go to state 50
    termo                          shift and go to state 33
    fator                          shift and go to state 36

state 23

    (39) operacao -> FOR ( . ID EQUAL expressao ; expressao_logica ; operacao_inc ) { operacoes }

    ID              shift and go to state 51


state 24

    (40) operacao -> READ ID . ;
    (41) operacao -> READ ID . [ INT ] ;
    (42) operacao -> READ ID . [ ID ] ;
    (43) operacao -> READ ID . [ INT ] [ INT ] ;

    ;               shift and go to state 52
    [               shift and go to state 53


state 25

    (4) atribuicao -> INT_A ID EQUAL . INT ;

    INT             shift and go to state 54


state 26

    (5) atribuicao -> INT_A ID ; .

    INT_A           reduce using rule 5 (atribuicao -> INT_A ID ; .)
    STRING_A        reduce using rule 5 (atribuicao -> INT_A ID ; .)
    ID              reduce using rule 5 (atribuicao -> INT_A ID ; .)
    PRINT           reduce using rule 5 (atribuicao -> INT_A ID ; .)
    IF              reduce using rule 5 (atribuicao -> INT_A ID ; .)
    FOR             reduce using rule 5 (atribuicao -> INT_A ID ; .)
    READ            reduce using rule 5 (atribuicao -> INT_A ID ; .)
    $end            reduce using rule 5 (atribuicao -> INT_A ID ; .)


state 27

    (6) atribuicao -> INT_A ID [ . INT ] ;
    (7) atribuicao -> INT_A ID [ . INT ] [ INT ] ;

    INT             shift and go to state 55


state 28

    (8) atribuicao -> STRING_A ID EQUAL . STRING ;

    STRING          shift and go to state 56


state 29

    (55) fator -> ID .
    (56) fator -> ID . [ INT ]
    (57) fator -> ID . [ ID ]
    (58) fator -> ID . [ INT ] [ INT ]

    *               reduce using rule 55 (fator -> ID .)
    /               reduce using rule 55 (fator -> ID .)
    %               reduce using rule 55 (fator -> ID .)
    +               reduce using rule 55 (fator -> ID .)
    -               reduce using rule 55 (fator -> ID .)
    >               reduce using rule 55 (fator -> ID .)
    <               reduce using rule 55 (fator -> ID .)
    LESS_EQUAL      reduce using rule 55 (fator -> ID .)
    MORE_EQUAL      reduce using rule 55 (fator -> ID .)
    EQUAL_EQUAL     reduce using rule 55 (fator -> ID .)
    DIF             reduce using rule 55 (fator -> ID .)
    ;               reduce using rule 55 (fator -> ID .)
    )               reduce using rule 55 (fator -> ID .)
    AND             reduce using rule 55 (fator -> ID .)
    OR              reduce using rule 55 (fator -> ID .)
    [               shift and go to state 57


state 30

    (28) operacao -> ID EQUAL expressoes . ;

    ;               shift and go to state 58


state 31

    (44) expressoes -> expressao .
    (46) expressao -> expressao . + termo
    (47) expressao -> expressao . - termo
    (59) expressao_relacional -> expressao . > expressao
    (60) expressao_relacional -> expressao . < expressao
    (61) expressao_relacional -> expressao . LESS_EQUAL expressao
    (62) expressao_relacional -> expressao . MORE_EQUAL expressao
    (63) expressao_relacional -> expressao . EQUAL_EQUAL expressao
    (64) expressao_relacional -> expressao . DIF expressao

    ;               reduce using rule 44 (expressoes -> expressao .)
    +               shift and go to state 59
    -               shift and go to state 60
    >               shift and go to state 61
    <               shift and go to state 62
    LESS_EQUAL      shift and go to state 63
    MORE_EQUAL      shift and go to state 64
    EQUAL_EQUAL     shift and go to state 65
    DIF             shift and go to state 66


state 32

    (45) expressoes -> expressao_logica .
    (66) expressao_logica -> expressao_logica . AND fator_logico
    (67) expressao_logica -> expressao_logica . OR fator_logico

    ;               reduce using rule 45 (expressoes -> expressao_logica .)
    AND             shift and go to state 67
    OR              shift and go to state 68


state 33

    (48) expressao -> termo .
    (49) termo -> termo . * fator
    (50) termo -> termo . / fator
    (51) termo -> termo . % fator

    +               reduce using rule 48 (expressao -> termo .)
    -               reduce using rule 48 (expressao -> termo .)
    >               reduce using rule 48 (expressao -> termo .)
    <               reduce using rule 48 (expressao -> termo .)
    LESS_EQUAL      reduce using rule 48 (expressao -> termo .)
    MORE_EQUAL      reduce using rule 48 (expressao -> termo .)
    EQUAL_EQUAL     reduce using rule 48 (expressao -> termo .)
    DIF             reduce using rule 48 (expressao -> termo .)
    ;               reduce using rule 48 (expressao -> termo .)
    )               reduce using rule 48 (expressao -> termo .)
    AND             reduce using rule 48 (expressao -> termo .)
    OR              reduce using rule 48 (expressao -> termo .)
    *               shift and go to state 69
    /               shift and go to state 70
    %               shift and go to state 71


state 34

    (65) expressao_logica -> ! . fator_logico
    (69) fator_logico -> . ( expressao_logica )
    (70) fator_logico -> . expressao_relacional
    (59) expressao_relacional -> . expressao > expressao
    (60) expressao_relacional -> . expressao < expressao
    (61) expressao_relacional -> . expressao LESS_EQUAL expressao
    (62) expressao_relacional -> . expressao MORE_EQUAL expressao
    (63) expressao_relacional -> . expressao EQUAL_EQUAL expressao
    (64) expressao_relacional -> . expressao DIF expressao
    (46) expressao -> . expressao + termo
    (47) expressao -> . expressao - termo
    (48) expressao -> . termo
    (49) termo -> . termo * fator
    (50) termo -> . termo / fator
    (51) termo -> . termo % fator
    (52) termo -> . fator
    (53) fator -> . INT
    (54) fator -> . ( expressao )
    (55) fator -> . ID
    (56) fator -> . ID [ INT ]
    (57) fator -> . ID [ ID ]
    (58) fator -> . ID [ INT ] [ INT ]

    (               shift and go to state 37
    INT             shift and go to state 39
    ID              shift and go to state 29

    fator_logico                   shift and go to state 72
    expressao_relacional           shift and go to state 38
    expressao                      shift and go to state 50
    termo                          shift and go to state 33
    fator                          shift and go to state 36

state 35

    (68) expressao_logica -> fator_logico .

    AND             reduce using rule 68 (expressao_logica -> fator_logico .)
    OR              reduce using rule 68 (expressao_logica -> fator_logico .)
    ;               reduce using rule 68 (expressao_logica -> fator_logico .)
    )               reduce using rule 68 (expressao_logica -> fator_logico .)


state 36

    (52) termo -> fator .

    *               reduce using rule 52 (termo -> fator .)
    /               reduce using rule 52 (termo -> fator .)
    %               reduce using rule 52 (termo -> fator .)
    +               reduce using rule 52 (termo -> fator .)
    -               reduce using rule 52 (termo -> fator .)
    >               reduce using rule 52 (termo -> fator .)
    <               reduce using rule 52 (termo -> fator .)
    LESS_EQUAL      reduce using rule 52 (termo -> fator .)
    MORE_EQUAL      reduce using rule 52 (termo -> fator .)
    EQUAL_EQUAL     reduce using rule 52 (termo -> fator .)
    DIF             reduce using rule 52 (termo -> fator .)
    ;               reduce using rule 52 (termo -> fator .)
    )               reduce using rule 52 (termo -> fator .)
    AND             reduce using rule 52 (termo -> fator .)
    OR              reduce using rule 52 (termo -> fator .)


state 37

    (69) fator_logico -> ( . expressao_logica )
    (54) fator -> ( . expressao )
    (65) expressao_logica -> . ! fator_logico
    (66) expressao_logica -> . expressao_logica AND fator_logico
    (67) expressao_logica -> . expressao_logica OR fator_logico
    (68) expressao_logica -> . fator_logico
    (46) expressao -> . expressao + termo
    (47) expressao -> . expressao - termo
    (48) expressao -> . termo
    (69) fator_logico -> . ( expressao_logica )
    (70) fator_logico -> . expressao_relacional
    (49) termo -> . termo * fator
    (50) termo -> . termo / fator
    (51) termo -> . termo % fator
    (52) termo -> . fator
    (59) expressao_relacional -> . expressao > expressao
    (60) expressao_relacional -> . expressao < expressao
    (61) expressao_relacional -> . expressao LESS_EQUAL expressao
    (62) expressao_relacional -> . expressao MORE_EQUAL expressao
    (63) expressao_relacional -> . expressao EQUAL_EQUAL expressao
    (64) expressao_relacional -> . expressao DIF expressao
    (53) fator -> . INT
    (54) fator -> . ( expressao )
    (55) fator -> . ID
    (56) fator -> . ID [ INT ]
    (57) fator -> . ID [ ID ]
    (58) fator -> . ID [ INT ] [ INT ]

    !               shift and go to state 34
    (               shift and go to state 37
    INT             shift and go to state 39
    ID              shift and go to state 29

    expressao_logica               shift and go to state 73
    expressao                      shift and go to state 74
    fator_logico                   shift and go to state 35
    termo                          shift and go to state 33
    expressao_relacional           shift and go to state 38
    fator                          shift and go to state 36

state 38

    (70) fator_logico -> expressao_relacional .

    AND             reduce using rule 70 (fator_logico -> expressao_relacional .)
    OR              reduce using rule 70 (fator_logico -> expressao_relacional .)
    ;               reduce using rule 70 (fator_logico -> expressao_relacional .)
    )               reduce using rule 70 (fator_logico -> expressao_relacional .)


state 39

    (53) fator -> INT .

    *               reduce using rule 53 (fator -> INT .)
    /               reduce using rule 53 (fator -> INT .)
    %               reduce using rule 53 (fator -> INT .)
    +               reduce using rule 53 (fator -> INT .)
    -               reduce using rule 53 (fator -> INT .)
    >               reduce using rule 53 (fator -> INT .)
    <               reduce using rule 53 (fator -> INT .)
    LESS_EQUAL      reduce using rule 53 (fator -> INT .)
    MORE_EQUAL      reduce using rule 53 (fator -> INT .)
    EQUAL_EQUAL     reduce using rule 53 (fator -> INT .)
    DIF             reduce using rule 53 (fator -> INT .)
    ;               reduce using rule 53 (fator -> INT .)
    )               reduce using rule 53 (fator -> INT .)
    AND             reduce using rule 53 (fator -> INT .)
    OR              reduce using rule 53 (fator -> INT .)


state 40

    (31) operacao -> ID [ ID . ] EQUAL expressoes ;
    (17) operacao_inc -> ID [ ID . ] + + ;
    (19) operacao_inc -> ID [ ID . ] - - ;
    (21) operacao_inc -> ID [ ID . ] + EQUAL expressao ;
    (23) operacao_inc -> ID [ ID . ] - EQUAL expressao ;

    ]               shift and go to state 75


state 41

    (29) operacao -> ID [ INT . ] [ INT ] EQUAL expressoes ;
    (30) operacao -> ID [ INT . ] EQUAL expressoes ;
    (16) operacao_inc -> ID [ INT . ] + + ;
    (18) operacao_inc -> ID [ INT . ] - - ;
    (20) operacao_inc -> ID [ INT . ] + EQUAL expressao ;
    (22) operacao_inc -> ID [ INT . ] - EQUAL expressao ;
    (24) operacao_inc -> ID [ INT . ] [ INT ] + + ;
    (25) operacao_inc -> ID [ INT . ] [ INT ] - - ;
    (26) operacao_inc -> ID [ INT . ] [ INT ] + EQUAL expressao ;
    (27) operacao_inc -> ID [ INT . ] [ INT ] - EQUAL expressao ;

    ]               shift and go to state 76


state 42

    (12) operacao_inc -> ID + + . ;

    ;               shift and go to state 77


state 43

    (14) operacao_inc -> ID + EQUAL . expressao ;
    (46) expressao -> . expressao + termo
    (47) expressao -> . expressao - termo
    (48) expressao -> . termo
    (49) termo -> . termo * fator
    (50) termo -> . termo / fator
    (51) termo -> . termo % fator
    (52) termo -> . fator
    (53) fator -> . INT
    (54) fator -> . ( expressao )
    (55) fator -> . ID
    (56) fator -> . ID [ INT ]
    (57) fator -> . ID [ ID ]
    (58) fator -> . ID [ INT ] [ INT ]

    INT             shift and go to state 39
    (               shift and go to state 79
    ID              shift and go to state 29

    expressao                      shift and go to state 78
    termo                          shift and go to state 33
    fator                          shift and go to state 36

state 44

    (13) operacao_inc -> ID - - . ;

    ;               shift and go to state 80


state 45

    (15) operacao_inc -> ID - EQUAL . expressao ;
    (46) expressao -> . expressao + termo
    (47) expressao -> . expressao - termo
    (48) expressao -> . termo
    (49) termo -> . termo * fator
    (50) termo -> . termo / fator
    (51) termo -> . termo % fator
    (52) termo -> . fator
    (53) fator -> . INT
    (54) fator -> . ( expressao )
    (55) fator -> . ID
    (56) fator -> . ID [ INT ]
    (57) fator -> . ID [ ID ]
    (58) fator -> . ID [ INT ] [ INT ]
